--- a/src/Components/Forms/Input.module.css
+++ b/src/Components/Forms/Input.module.css
@@ -3,14 +3,14 @@
 }
 
 .input {
-  border: 1px solicit #eee;
+  border: 1px solid #eee;
   display: block;
   width: 100%;
   font-size: 1rem;
   padding: 0.8rem;
   border-radius: 0.4rem;
   background: #eee;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .input:focus,
@@ -25,11 +25,11 @@
   display: block;
   font-size: 1rem;
   line-height: 1;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
 }
 
 .error {
-  font-size: .875rem;
   color: #f31;
-  margin-top: .25rem;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
 }
