--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,20 +1,20 @@
-.header{
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+.header {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
   z-index: 100;
   background: white;
-  top:0px;
+  top: 0px;
 }
 
-.nav{
+.nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 4rem;
 }
 
-.logo{
+.logo {
   padding: 0.5rem 0;
 }
 
@@ -30,7 +30,7 @@
   width: 14px;
   height: 17px;
   background: url('../Assets/usuario.svg') no-repeat center center;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   position: relative;
   top: -1px;
 }
